src/test/ui/borrowck/borrowck-use-in-index-lvalue.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0381]: use of possibly uninitialized variable: `w`
  --> $DIR/borrowck-use-in-index-lvalue.rs:3:5
   |
LL |     w[5] = 0;
   |     ^^^^ use of possibly uninitialized `*w`

error[E0381]: use of possibly uninitialized variable: `w`
  --> $DIR/borrowck-use-in-index-lvalue.rs:6:5
   |
LL |     w[5] = 0;
   |     ^^^^ use of possibly uninitialized `*w`
=======
error[E0381]: use of possibly-uninitialized variable: `w`
  --> $DIR/borrowck-use-in-index-lvalue.rs:3:5
   |
LL |     w[5] = 0;
   |     ^^^^ use of possibly-uninitialized `*w`

error[E0381]: use of possibly-uninitialized variable: `w`
  --> $DIR/borrowck-use-in-index-lvalue.rs:6:5
   |
LL |     w[5] = 0;
   |     ^^^^ use of possibly-uninitialized `*w`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
